--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,16 @@ body {
   font-size: 62.5%;
   line-height: 1.7;
   color: #777;
+  padding: 1rem;
+}
+
+header {
+  height: 95vh;
+  background-image: linear-gradient(
+    to right bottom, 
+    rgba(85, 85, 85, 0.8), 
+    rgba(136, 136, 136, 0.8)),
+     url(./img/hero.jpg);
+  background-size: cover;
+  background-position: top;
 }
