--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,16 @@ body {
   font-size: 1rem;
   margin-right: 1rem;
 }
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.heading-primary-main {
+  
+}
+
+.heading-primary-sub {
+  
+}
