--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,9 @@ body {
      url(./img/hero.jpg);
   background-size: cover;
   background-position: top;
+  display: grid;
+  justify-content: center;
+  align-content: center;
 }
 
 .logo {
@@ -58,13 +61,20 @@ body {
 
 .heading-primary {
   color: #fff;
-  text-transform: uppercase;
+  display: grid;
 }
 
 .heading-primary-main {
-  
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 1rem;
 }
 
 .heading-primary-sub {
-  
+  font-size: 1.8rem;
+  font-weight: 400;
+  font-family: "Parisienne", serif;
+  letter-spacing: .2rem;
+  text-align: center;
 }
