--- a/src/App.css
+++ b/src/App.css
@@ -26,19 +26,6 @@ body {
   padding-bottom: 1rem;
 }
 
-.header-hero {
-  background-image: linear-gradient(
-    to right bottom, 
-    rgba(85, 85, 85, 0.8), 
-    rgba(136, 136, 136, 0.8)),
-     url(./img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-}
-
 .logo {
   justify-self: center;
   height: 11rem;
@@ -59,6 +46,19 @@ body {
   margin-right: 1rem;
 }
 
+.header-hero {
+  background-image: linear-gradient(
+    to right bottom, 
+    rgba(85, 85, 85, 0.8), 
+    rgba(136, 136, 136, 0.8)),
+     url(./img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
+
 .heading-primary {
   color: #fff;
   display: grid;
@@ -69,6 +69,27 @@ body {
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 1rem;
+  display: flex;
+  flex-direction: row;
+
+  /* animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-in; */
+  /* animation-delay: 3s; */
+}
+
+.heading-primary-main-left {
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  /* animation-delay: 3s; */
+}
+
+.heading-primary-main-right {
+  animation-name: moveInRight;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  /* animation-delay: 3s; */
 }
 
 .heading-primary-sub {
@@ -77,4 +98,30 @@ body {
   font-family: "Parisienne", serif;
   letter-spacing: .2rem;
   text-align: center;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
 }
