--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ body {
 .heading-primary {
   color: #fff;
   display: grid;
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -71,25 +72,16 @@ body {
   letter-spacing: 1rem;
   display: flex;
   flex-direction: row;
-
-  /* animation-name: moveInLeft;
-  animation-duration: 1s;
-  animation-timing-function: ease-in; */
-  /* animation-delay: 3s; */
 }
 
 .heading-primary-main-left {
-  animation-name: moveInLeft;
-  animation-duration: 1s;
-  animation-timing-function: ease-in;
-  /* animation-delay: 3s; */
+  animation: moveInLeft 1.5s ease-in;
+  margin-right: .5rem;
 }
 
 .heading-primary-main-right {
-  animation-name: moveInRight;
-  animation-duration: 1s;
-  animation-timing-function: ease-in;
-  /* animation-delay: 3s; */
+  animation: moveInRight 1.5s ease-in;
+  margin-left: .5rem;
 }
 
 .heading-primary-sub {
@@ -98,30 +90,38 @@ body {
   font-family: "Parisienne", serif;
   letter-spacing: .2rem;
   text-align: center;
+  animation: moveUp 1.5s ease-in;
 }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-200px);
   }
-
   100% {
     opacity: 1;
     transform: translateX(0);
   }
-
 }
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(200px);
   }
-
   100% {
     opacity: 1;
     transform: translateX(0);
   }
+}
 
+@keyframes moveUp {
+  0% {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
