--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,27 @@ body {
   text-decoration: none;
   color: #777;
   text-transform: uppercase;
-  font-size: 1rem;
-  margin-right: 1rem;
+  font-size: 1.3rem;
+  margin-right: 2rem;
+  position: relative;
+}
+
+.main-nav-item::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1.3px;
+  bottom: -3px;
+  left: 0;
+  background-color: #002366;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.4s ease-in-out;
+}
+
+.main-nav-item:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 .heading-primary {
