--- a/src/App.css
+++ b/src/App.css
@@ -15,45 +15,39 @@ body {
   height: 95vh;
   display: grid;
   grid-template-rows: min-content 1fr; }
-
-.header-nav {
-  display: grid;
-  justify-content: center;
-  padding-bottom: 1rem; }
-
-.logo {
-  justify-self: center;
-  height: 11rem;
-  width: 13rem;
-  margin-bottom: 1rem; }
-
-.main-nav {
-  list-style: none;
-  display: flex; }
-
-.main-nav-item {
-  text-decoration: none;
-  color: #777;
-  text-transform: uppercase;
-  font-size: 1.3rem;
-  margin-right: 2rem;
-  position: relative; }
-
-.main-nav-item::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1.3px;
-  bottom: -3px;
-  left: 0;
-  background-color: #002366;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.4s ease-in-out; }
-
-.main-nav-item:hover::before {
-  visibility: visible;
-  transform: scaleX(1); }
+  .header__nav {
+    display: grid;
+    justify-content: center;
+    padding-bottom: 1rem; }
+  .header__logo {
+    justify-self: center;
+    height: 11rem;
+    width: 13rem;
+    margin-bottom: 1rem; }
+  .header__main-nav {
+    list-style: none;
+    display: flex; }
+    .header__main-nav--item {
+      text-decoration: none;
+      color: #777;
+      text-transform: uppercase;
+      font-size: 1.3rem;
+      margin-right: 2rem;
+      position: relative; }
+      .header__main-nav--item::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1.3px;
+        bottom: -3px;
+        left: 0;
+        background-color: #002366;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.4s ease-in-out; }
+      .header__main-nav--item:hover::before {
+        visibility: visible;
+        transform: scaleX(1); }
 
 .heading-primary {
   background-image: linear-gradient(to right bottom, rgba(119, 119, 119, 0.8), rgba(153, 153, 153, 0.8)), url(./img/hero.jpg);
