--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,52 +26,52 @@ $color-white: #fff;
     height: 95vh;
     display: grid;
     grid-template-rows: min-content 1fr;
-  }
-  
-  
-  .header-nav {
-    display: grid;
-    justify-content: center;
-    padding-bottom: 1rem;
-  }
-  
-  .logo {
-    justify-self: center;
-    height: 11rem;
-    width: 13rem;
-    margin-bottom: 1rem;
-  }
-  
-  .main-nav {
-    list-style: none;
-    display: flex;
-  }
-  
-  .main-nav-item {
-    text-decoration: none;
-    color: $color-text-primary;
-    text-transform: uppercase;
-    font-size: 1.3rem;
-    margin-right: 2rem;
-    position: relative;
-  }
-  
-  .main-nav-item::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 1.3px;
-    bottom: -3px;
-    left: 0;
-    background-color: #002366;
-    visibility: hidden;
-    transform: scaleX(0);
-    transition: all 0.4s ease-in-out;
-  }
-  
-  .main-nav-item:hover::before {
-    visibility: visible;
-    transform: scaleX(1);
+
+    &__nav {
+      display: grid;
+      justify-content: center;
+      padding-bottom: 1rem;
+    }
+
+    &__logo {
+      justify-self: center;
+      height: 11rem;
+      width: 13rem;
+      margin-bottom: 1rem;
+    }
+
+    &__main-nav {
+      list-style: none;
+      display: flex;
+
+      &--item {
+        text-decoration: none;
+        color: $color-text-primary;
+        text-transform: uppercase;
+        font-size: 1.3rem;
+        margin-right: 2rem;
+        position: relative;
+
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 1.3px;
+          bottom: -3px;
+          left: 0;
+          background-color: $color-primary;
+          visibility: hidden;
+          transform: scaleX(0);
+          transition: all 0.4s ease-in-out;
+        }
+
+        &:hover::before {
+          visibility: visible;
+          transform: scaleX(1);
+        }
+
+      }
+    }
   }
   
   .heading-primary {
