--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 $color-text-primary: #777;
 $color-text-light: #999;
+$color-grey-light-1: #f7f7f7;
 
 $color-primary: #002366;
+$color-primary-light: #1059a9;
+$color-primary-dark: #00116c;
 
 $color-white: #fff;
