--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,5 +1,6 @@
 .section {
     &-about{
-        background-color: ;
+        background-color: $color-grey-light-1;
+        padding: 10rem 0;
     }
 }
