--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -50,3 +50,14 @@ body {
       animation: moveUp 1.5s ease-in;
     }
   }
+
+  .heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    display: grid;
+    justify-content: center;
+  }
