--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,6 @@
-@import "./abstract/functions";
-@import "./abstract/mixins";
-@import "./abstract/variables";
+@import "./abstracts/functions";
+@import "./abstracts/mixins";
+@import "./abstracts/variables";
 
 @import "./base/animations";
 @import "./base/base";
@@ -8,5 +8,6 @@
 @import "./base/utilities";
 
 @import "./layout/header";
+@import "./layout/components";
 
 @import "./pages/home";
