adds in info section for about

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,3 +1,6 @@
+
+// COLORS
+
 $color-text-primary: #777;
 $color-text-light: #999;
 $color-grey-light-1: #f7f7f7;
@@ -7,3 +10,7 @@ $color-primary-light: #1059a9;
 $color-primary-dark: #00116c;
 
 $color-white: #fff;
+
+// FONT
+
+$default-font-size: 1.6rem;
