--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,35 @@ body {
   display: grid;
   justify-content: center; }
 
+.paragraph {
+  font-size: 1.6rem; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
+.app {
+  display: grid;
+  grid-template-rows: min-content 1fr; }
+
+.section-about {
+  display: grid;
+  grid-template-rows: repeat(2, min-content); }
+
+.about-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); }
+  .about-content__text {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 2rem;
+    margin-left: 5rem; }
+  .about-content__images {
+    display: grid;
+    justify-content: center; }
+
 .header {
   height: 95vh;
   display: grid;
@@ -118,10 +147,6 @@ body {
         visibility: visible;
         transform: scaleX(1); }
 
-.section_about {
-  display: grid;
-  grid-template-rows: repeat(2, min-content); }
-
 .section-about {
   background-color: #f7f7f7;
-  padding: 10rem 0; }
+  padding: 5rem 0; }
