--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -1,4 +1,21 @@
-.section_about {
+.section-about {
     display: grid;
     grid-template-rows: repeat(2, min-content);
+}
+
+.about-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    &__text {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-row-gap: 2rem;
+        margin-left: 5rem;
+    }
+
+    &__images {
+        display: grid;
+        justify-content: center;
+    }
 }
