--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,9 @@
 @import "./base/typography";
 @import "./base/utilities";
 
-@import "./layout/header";
+@import "./layout/app";
 @import "./layout/components";
+@import "./layout/header";
+
 
 @import "./pages/home";
