--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -14,8 +14,8 @@
         margin-left: 5rem;
     }
 
-    &__images {
-        display: grid;
-        justify-content: center;
-    }
+    // &__images {
+    //     display: grid;
+    //     justify-content: center;
+    // }
 }
