--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,8 @@
 @import "./base/typography";
 @import "./base/utilities";
 
+@import "./components/composition";
+
 @import "./layout/app";
 @import "./layout/components";
 @import "./layout/header";
