--- a/src/sass/components/_composition.scss
+++ b/src/sass/components/_composition.scss
@@ -9,6 +9,8 @@
         box-shadow: 0 1.5rem 4rem rgba($color-primary-dark, .4);
         border-radius: 2px;
         position: absolute;
+        z-index: 10;
+        transition: all .2s;
 
         &--p1 {
             left: 5rem;
@@ -24,5 +26,15 @@
             left: 20rem;
             top: 10rem;
         }
+
+        &:hover {
+            transform: scale(1.05) translateY(-5px);
+            box-shadow: 0 2.5rem 4rem rgba($color-primary-dark, 0.4);
+            z-index: 20;
+        }
+    }
+
+    &hover &__photo:not(:hover) {
+        transform: scale(.9);
     }
 }
