--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,9 @@ body {
 .u-margin-bottom-8 {
   margin-bottom: 8rem; }
 
+.u-margin-left-5 {
+  margin-left: 5rem; }
+
 .composition {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -99,7 +102,7 @@ body {
     border-radius: 2px;
     position: absolute;
     z-index: 10;
-    transition: all .2s; }
+    transition: all .4s; }
     .composition__photo--p1 {
       left: 5rem;
       top: -2rem; }
@@ -130,8 +133,7 @@ body {
   .about-content__text {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    grid-row-gap: 2rem;
-    margin-left: 5rem; }
+    grid-row-gap: 2rem; }
 
 .header {
   height: 95vh;
@@ -155,7 +157,8 @@ body {
       text-transform: uppercase;
       font-size: 1.3rem;
       margin-right: 2rem;
-      position: relative; }
+      position: relative;
+      cursor: pointer; }
       .header__main-nav--item::before {
         content: "";
         position: absolute;
