--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -27,6 +27,7 @@
         font-size: 1.3rem;
         margin-right: 2rem;
         position: relative;
+        cursor: pointer;
 
         &::before {
           content: "";
