--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -24,7 +24,7 @@
         text-decoration: none;
         color: $color-text-primary;
         text-transform: uppercase;
-        font-size: 1.3rem;
+        font-size: 2rem;
         margin-right: 2rem;
         position: relative;
         cursor: pointer;
@@ -49,4 +49,9 @@
 
       }
     }
+  }
+
+  .mini-nav-bar {
+    background-color: salmon;
+    z-index: 100;
   }
