finishes up services section

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -51,7 +51,7 @@
     }
   }
 
-  .mini-nav-bar {
-    background-color: salmon;
-    z-index: 100;
-  }
+  // .mini-nav-bar {
+  //   background-color: salmon;
+  //   z-index: 100;
+  // }
