--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
   align-content: center; }
   .heading-primary--main {
     text-transform: uppercase;
-    font-size: 3.5rem;
+    font-size: 5rem;
     font-weight: 700;
     letter-spacing: 1rem;
     display: flex;
@@ -63,7 +63,7 @@ body {
       animation: moveInRight 1.5s ease-in;
       margin-left: .5rem; }
   .heading-primary--sub {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     font-weight: 400;
     font-family: "Parisienne", serif;
     letter-spacing: .2rem;
@@ -74,11 +74,17 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
-  background-image: linear-gradient(to right, #1059a9, #00116c);
+  background-image: linear-gradient(to right, #1059a9, #002366);
   -webkit-background-clip: text;
   color: transparent;
+  letter-spacing: .2rem;
   display: grid;
   justify-content: center; }
+
+.heading-tertiary {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  margin: 1rem 0; }
 
 .paragraph {
   font-size: 1.6rem; }
@@ -88,6 +94,12 @@ body {
 
 .u-margin-bottom-8 {
   margin-bottom: 8rem; }
+
+.u-margin-bottom-4 {
+  margin-bottom: 4rem; }
+
+.u-margin-top-4 {
+  margin-top: 4rem; }
 
 .u-margin-left-5 {
   margin-left: 5rem; }
@@ -119,6 +131,24 @@ body {
   .compositionhover .composition__photo:not(:hover) {
     transform: scale(0.9); }
 
+.service-box {
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  justify-items: center;
+  background-color: rgba(255, 255, 255, 0.9);
+  font-size: 1.2rem;
+  padding: 2rem;
+  border-radius: 3px;
+  text-align: center;
+  box-shadow: 0 1.5rem 4rem rgba(0, 35, 102, 0.15);
+  transition: all .2s; }
+  .service-box__image {
+    width: 20rem;
+    height: 15rem;
+    margin-bottom: .5rem; }
+  .service-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
+
 .app {
   display: grid;
   grid-template-rows: min-content 1fr; }
@@ -134,6 +164,18 @@ body {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-row-gap: 2rem; }
+
+.section-services {
+  display: grid;
+  padding: 10rem 0;
+  background-image: linear-gradient(to right bottom, rgba(119, 119, 119, 0.5), rgba(153, 153, 153, 0.5)), url(./img/form-background-min.jpg);
+  background-size: cover; }
+
+.services-content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 5rem;
+  margin: 0 5rem; }
 
 .header {
   height: 95vh;
@@ -173,10 +215,6 @@ body {
       .header__main-nav--item:hover::before {
         visibility: visible;
         transform: scaleX(1); }
-
-.mini-nav-bar {
-  background-color: salmon;
-  z-index: 100; }
 
 .section-about {
   background-color: #f7f7f7;
