--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -24,7 +24,7 @@ body {
 
     &--main {
       text-transform: uppercase;
-      font-size: 3.5rem;
+      font-size: 5rem;
       font-weight: 700;
       letter-spacing: 1rem;
       display: flex;
@@ -42,7 +42,7 @@ body {
     }
 
     &--sub {
-      font-size: 2.5rem;
+      font-size: 3.5rem;
       font-weight: 400;
       font-family: "Parisienne", serif;
       letter-spacing: .2rem;
@@ -55,11 +55,18 @@ body {
     font-size: 3.5rem;
     text-transform: uppercase;
     font-weight: 700;
-    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary);
     -webkit-background-clip: text;
     color: transparent;
+    letter-spacing: .2rem;
     display: grid;
     justify-content: center;
+  }
+
+  .heading-tertiary {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    margin: 1rem 0;
   }
 
   .paragraph {
