--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -6,6 +6,14 @@
     margin-bottom: 8rem;
 }
 
+.u-margin-bottom-4 {
+    margin-bottom: 4rem;
+}
+
+.u-margin-top-4 {
+    margin-top: 4rem;
+}
+
 .u-margin-left-5 {
     margin-left: 5rem;
 }
