--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -13,3 +13,22 @@
         grid-row-gap: 2rem;
     }
 }
+
+.section-services {
+    display: grid;
+    // grid-template-rows: repeat(2, min-content);
+    padding: 10rem 0;
+    background-image: linear-gradient(
+        to right bottom, 
+        rgba($color-text-primary, 0.5), 
+        rgba($color-text-light, 0.5)),
+         url(./img/form-background-min.jpg);
+    background-size: cover;
+}
+
+.services-content { 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 5rem;
+    margin: 0 5rem;
+}
