--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "./components/composition";
 @import "./components/service-box";
+@import "./components/testimonials-review";
 
 @import "./layout/app";
 @import "./layout/components";
