--- a/src/sass/components/_testimonials-review.scss
+++ b/src/sass/components/_testimonials-review.scss
@@ -1,3 +1,26 @@
 .testimonials-review {
-    
+    display: grid;
+    grid-template-rows: 1fr min-content;
+    justify-content: center;
+    background-color: rgba($color-white, 0.9);
+    box-shadow: 0 1.5rem 4rem rgba($color-primary, .15);
+    margin-bottom: 5rem;
+}
+
+.review {
+
+    &__text {
+        font-size: $default-font-size;
+    }
+
+    &__user {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+
+        &-box {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+
 }
