--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -22,5 +22,7 @@
         padding: 5rem 0;
         display: grid;
         grid-template-rows: min-content repeat(2, auto);
+        justify-content: center;
+        margin: 0 auto;
     }
 }
