--- a/src/App.css
+++ b/src/App.css
@@ -155,19 +155,37 @@ body {
   display: grid;
   grid-template-rows: 1fr min-content;
   justify-content: center;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: white;
   box-shadow: 0 1.5rem 4rem rgba(0, 35, 102, 0.15);
-  margin-bottom: 5rem; }
+  width: 75%;
+  margin: 0 auto 5rem auto;
+  padding: 2rem;
+  border-radius: 5px; }
 
 .review__text {
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  margin-bottom: 2rem;
+  justify-self: center; }
+
+.review__photo {
+  width: 7rem;
+  height: 7rem;
+  margin-right: 2rem; }
 
 .review__user {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); }
+  grid-template-columns: min-content auto min-content;
+  justify-self: end;
+  align-items: center; }
   .review__user-box {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); }
+    grid-template-rows: repeat(2, 1fr);
+    font-size: 1.2rem;
+    margin-right: 2rem; }
+  .review__user-rating {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #002366; }
 
 .app {
   display: grid;
@@ -243,5 +261,4 @@ body {
   padding: 5rem 0;
   display: grid;
   grid-template-rows: min-content repeat(2, auto);
-  justify-content: center;
-  margin: 0 auto; }
+  justify-content: center; }
