--- a/src/sass/components/_testimonials-review.scss
+++ b/src/sass/components/_testimonials-review.scss
@@ -6,7 +6,7 @@
     box-shadow: 0 1.5rem 4rem rgba($color-primary, .15);
     width: 75%;
     margin: 0 auto 5rem auto;
-    padding: 2rem;
+    padding: 1.5rem 2rem;
     border-radius: 5px;
 }
 
