--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./base/typography";
 @import "./base/utilities";
 
+@import "./components/button";
 @import "./components/composition";
 @import "./components/service-box";
 @import "./components/testimonials-review";
