--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,11 +1,58 @@
 .btn {
-  display: grid;
-  justify-self: center;
-  font-size: 2rem;
-  padding: 1rem;
-  border-radius: 5px;
-  text-transform: uppercase;
-  background-color: $color-primary;
-  color: $color-white;
-  text-decoration: none;
+
+    &,
+    &:link,
+    &:visited {
+        display: grid;
+        justify-self: center;
+        font-size: 2rem;
+        padding: 1rem;
+        border-radius: 5px;
+        text-transform: uppercase;
+        background-color: $color-primary;
+        color: $color-white;
+        text-decoration: none;
+        transition: all .2s;
+        position: relative;
+    }
+
+    &:hover {
+        transform: translateY(-.3rem);
+        box-shadow: 0 1rem 2rem rgba($color-primary, .2);
+    
+        &::after {
+            transform: scaleX(1.4) scaleY(1.5);
+            opacity: 0;
+        }
+    }
+    
+    &:active,
+    &:focus {
+        transform: translateY(-.1rem);
+        box-shadow: 0 .5rem 1rem rgba($color-primary, .2);
+    }
+
+    &--blue {
+        background-color: $color-primary;
+        color: $color-white;
+    
+        &::after {
+            background-color: $color-primary;
+        }
+    }
+    
+    &::after {
+        color: $color-white;
+        content: "";
+        display: grid;
+        justify-self: center;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        border-radius: 5px;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: all .4s;
+    }
 }
