--- a/src/App.css
+++ b/src/App.css
@@ -306,3 +306,9 @@ body {
   display: grid;
   grid-template-rows: min-content repeat(2, auto) min-content;
   justify-content: center; }
+
+.section-packages {
+  padding: 5rem 0;
+  display: grid;
+  grid-template-rows: min-content 1fr;
+  justify-content: center; }
