--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,31 @@ body {
   z-index: -1;
   transition: all .4s; }
 
+.card {
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  box-shadow: 0 1.5rem 4rem rgba(0, 35, 102, 0.15);
+  border-radius: 5px;
+  font-size: 1.6rem; }
+  .card__header {
+    background-color: #002366;
+    color: #fff;
+    padding: .5rem; }
+    .card__header--heading {
+      font-size: 3rem;
+      text-transform: uppercase; }
+  .card__details {
+    background-color: #f7f7f7;
+    border: 1px solid #002366; }
+    .card__details--list {
+      padding: 1rem 0 1rem 2rem; }
+  .card__btn {
+    background-color: #002366;
+    color: #fff;
+    border: none;
+    padding: 1rem;
+    cursor: pointer; }
+
 .composition {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -246,6 +271,12 @@ body {
 .services-content {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 5rem;
+  margin: 0 5rem; }
+
+.packages-content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 5rem;
   margin: 0 5rem; }
 
