--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -15,3 +15,10 @@
     grid-column-gap: 5rem;
     margin: 0 5rem;
 }
+
+.packages-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 5rem;
+    margin: 0 5rem;
+}
