--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./base/utilities";
 
 @import "./components/button";
+@import "./components/card";
 @import "./components/composition";
 @import "./components/service-box";
 @import "./components/testimonials-review";
