--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -6,6 +6,7 @@
         display: grid;
         justify-self: center;
         font-size: 2rem;
+        font-weight: 700;
         padding: 1rem;
         border-radius: 5px;
         text-transform: uppercase;
