--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import "./components/button";
 @import "./components/card";
 @import "./components/composition";
+@import "./components/form";
 @import "./components/service-box";
 @import "./components/testimonials-review";
 
