adds new sectiob

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -72,3 +72,8 @@ body {
   .paragraph {
     font-size: $default-font-size;
   }
+
+  .form-description {
+    width: 50%;
+    font-size: $default-font-size;
+  }
