--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,10 @@ body {
 .paragraph {
   font-size: 1.6rem; }
 
+.form-description {
+  width: 50%;
+  font-size: 1.6rem; }
+
 .u-center-text {
   text-align: center; }
 
@@ -103,6 +107,9 @@ body {
 
 .u-margin-left-5 {
   margin-left: 5rem; }
+
+.align-left {
+  justify-content: start; }
 
 .btn, .btn:link, .btn:visited {
   display: grid;
@@ -295,10 +302,21 @@ body {
   margin: 0 5rem; }
 
 .enquiries-content {
+  display: grid;
+  grid-template-rows: repeat(4, min-content);
+  grid-row-gap: 1.5rem;
   margin: 0 auto;
   background-color: #fff;
   box-shadow: 0 1.5rem 4rem rgba(0, 35, 102, 0.15);
   border-radius: 5px; }
+
+.enquiries-image {
+  height: 2rem;
+  width: 25%; }
+
+.enquiries-layout {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); }
 
 .header {
   height: 95vh;
