--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -23,9 +23,25 @@
     margin: 0 5rem; 
 }
 
-.enquiries-content {
-    margin: 0 auto;
-    background-color: $color-white;
-    box-shadow: 0 1.5rem 4rem rgba($color-primary, .15);
-    border-radius: 5px;
+.enquiries {
+
+    &-content {
+        display: grid;
+        grid-template-rows: repeat(4, min-content);
+        grid-row-gap: 1.5rem;
+        margin: 0 auto;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-primary, .15);
+        border-radius: 5px;
+    }
+
+    &-image {
+        height: 2rem;
+        width: 25%;
+    }
+
+    &-layout {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
