--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ body {
   font-size: 1.6rem; }
 
 .form-description {
-  width: 50%;
+  width: 90%;
   font-size: 1.6rem; }
 
 .u-center-text {
@@ -301,22 +301,27 @@ body {
   grid-column-gap: 10rem;
   margin: 0 5rem; }
 
+.enquiries-layout {
+  background-image: url(./img/form-pic.jpg);
+  background-size: 65%;
+  background-position: right;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 35, 102, 0.15);
+  display: flex;
+  justify-content: flex-end; }
+
 .enquiries-content {
+  width: 55%;
   display: grid;
   grid-template-rows: repeat(4, min-content);
   grid-row-gap: 1.5rem;
-  margin: 0 auto;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 1.5rem 4rem rgba(0, 35, 102, 0.15);
-  border-radius: 5px; }
+  padding-left: 1rem; }
 
 .enquiries-image {
-  height: 2rem;
-  width: 25%; }
-
-.enquiries-layout {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); }
+  height: 100%;
+  width: 100%; }
 
 .header {
   height: 95vh;
@@ -386,5 +391,5 @@ body {
   padding: 5rem 0;
   display: grid;
   justify-content: center;
-  background-image: linear-gradient(to right bottom, rgba(119, 119, 119, 0.5), rgba(153, 153, 153, 0.5)), url(./img/form-background.jpg);
+  background-image: linear-gradient(to right bottom, rgba(119, 119, 119, 0.7), rgba(153, 153, 153, 0.2));
   background-size: cover; }
