--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -25,23 +25,28 @@
 
 .enquiries {
 
+    &-layout {
+    background-image: url(./img/form-pic.jpg);
+    background-size: 65%;
+    background-position: right;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-primary, .15);
+    display: flex;
+    justify-content: flex-end;
+    }
+
     &-content {
+        width: 55%;
         display: grid;
         grid-template-rows: repeat(4, min-content);
         grid-row-gap: 1.5rem;
-        margin: 0 auto;
-        background-color: $color-white;
+        background-color: rgba($color-white, .9);
         box-shadow: 0 1.5rem 4rem rgba($color-primary, .15);
-        border-radius: 5px;
+        padding-left: 1rem;
     }
 
     &-image {
-        height: 2rem;
-        width: 25%;
-    }
-
-    &-layout {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        height: 100%;
+        width: 100%;
     }
 }
