--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .section {
     &-about{
         background-color: $color-grey-light-1;
-        padding: 5rem 0 15rem 0;
+        padding: 5rem 0 20rem 0;
         display: grid;
         grid-template-rows: repeat(2, min-content);
     }
@@ -13,8 +13,9 @@
             to right bottom, 
             rgba($color-text-primary, 0.5), 
             rgba($color-text-light, 0.5)),
-             url(./img/form-background-min.jpg);
+             url(./img/form-pic.jpg);
         background-size: cover;
+        background-position: center;
     }
 
     &-testimonials {
