--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
   align-content: center; }
   .heading-primary--main {
     text-transform: uppercase;
-    font-size: 5rem;
+    font-size: 8rem;
     font-weight: 700;
     letter-spacing: 1rem;
     display: flex;
@@ -63,7 +63,7 @@ body {
       animation: moveInRight 1.5s ease-in;
       margin-left: .5rem; }
   .heading-primary--sub {
-    font-size: 3.5rem;
+    font-size: 5rem;
     font-weight: 400;
     font-family: "Parisienne", serif;
     letter-spacing: .2rem;
@@ -330,6 +330,26 @@ body {
 .enquiries-image {
   height: 100%;
   width: 100%; }
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  background-color: #002366;
+  color: #fff;
+  padding: 2rem 0; }
+  .footer__about-dev, .footer__list {
+    font-size: 1.6rem;
+    padding: 1rem;
+    font-weight: 700; }
+  .footer__list {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 1rem; }
+  .footer__link {
+    text-decoration: none;
+    color: #fff; }
 
 .header {
   height: 95vh;
