--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -50,3 +50,30 @@
         width: 100%;
     }
 }
+
+.footer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    background-color: $color-primary;
+    color: $color-white;
+    padding: 2rem 0;
+
+    &__about-dev, &__list {
+        font-size: $default-font-size;
+        padding: 1rem;
+        font-weight: 700;
+    }
+
+    &__list {
+        list-style: none;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-column-gap: 1rem;
+    }
+
+    &__link {
+        text-decoration: none;
+        color: $color-white;
+    }
+}
