--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,8 @@ body {
   color: #fff;
   text-decoration: none;
   transition: all .2s;
-  position: relative; }
+  position: relative;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-0.3rem);
@@ -164,8 +165,8 @@ body {
   color: #fff;
   border: none;
   padding: 1rem;
-  cursor: pointer;
-  transition: all .2s; }
+  transition: all .2s;
+  cursor: pointer; }
   .card__btn:hover {
     background-color: #1059a9; }
 
