--- a/src/App.css
+++ b/src/App.css
@@ -224,11 +224,33 @@ body {
 
 .form {
   display: grid;
-  grid-auto-rows: repeat(min-content);
+  grid-template-rows: repeat(3, min-content);
+  grid-template-columns: repeat(2, min-content);
   grid-row-gap: 1rem; }
+  .form__group-left {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2; }
+  .form__group-right {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3; }
   .form__group {
     display: grid;
-    justify-content: start; }
+    justify-content: start;
+    margin-bottom: 1rem; }
+    .form__group-textarea {
+      grid-row: 2 / 3;
+      grid-column: 1 / 3; }
+  .form__input, .form__select, .form__textarea {
+    padding: .5rem;
+    color: #777;
+    font-family: "Newsreader", serif; }
+  .form__label {
+    font-size: 1.6rem;
+    font-weight: 700; }
+
+.btn--blue {
+  grid-row: 3 / 4;
+  grid-column: 1 / 3; }
 
 .service-box {
   display: grid;
