--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,14 +1,45 @@
 .form {
     display: grid;
-    grid-auto-rows: repeat(min-content);
+    grid-template-rows: repeat(3, min-content);
+    grid-template-columns: repeat(2, min-content);
     grid-row-gap: 1rem;
+
+    &__group-left {
+        grid-row: 1 / 2;
+        grid-column: 1 / 2;
+    }
+
+    &__group-right {
+        grid-row: 1 / 2;
+        grid-column: 2 / 3;
+    }
 
     &__group {
         display: grid;
         justify-content: start;
+        margin-bottom: 1rem;
+
+        &-textarea {
+            grid-row: 2 / 3;
+            grid-column: 1 / 3;
+        }
+    }
+
+    &__input,
+    &__select,
+    &__textarea {
+        padding: .5rem;
+        color: $color-text-primary;
+        font-family: "Newsreader", serif;
     }
 
     &__label {
-        // visibility: hidden;
+        font-size: $default-font-size;
+        font-weight: 700;
     }
+}
+
+.btn--blue {
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
 }
