adds the icons for social links in footer

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -42,6 +42,12 @@
             background-color: $color-primary;
         }
     }
+
+    &--form {
+        grid-row: 3 / 4;
+        grid-column: 1 / 3;
+        font-family: "Newsreader", serif;
+    }
     
     &::after {
         color: $color-white;
