--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,11 @@ body {
   .btn--blue::after {
     background-color: #002366; }
 
+.btn--form {
+  grid-row: 3 / 4;
+  grid-column: 1 / 3;
+  font-family: "Newsreader", serif; }
+
 .btn::after {
   color: #fff;
   content: "";
@@ -248,10 +253,6 @@ body {
     font-size: 1.6rem;
     font-weight: 700; }
 
-.btn--blue {
-  grid-row: 3 / 4;
-  grid-column: 1 / 3; }
-
 .service-box {
   display: grid;
   grid-template-rows: repeat(3, min-content);
@@ -356,23 +357,27 @@ body {
 
 .footer {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   justify-items: center;
+  align-items: center;
   background-color: #002366;
   color: #fff;
   padding: 2rem 0; }
   .footer__about-dev, .footer__list {
-    font-size: 1.6rem;
-    padding: 1rem;
+    font-size: 1.8rem;
     font-weight: 700; }
   .footer__list {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 1rem; }
   .footer__link {
     text-decoration: none;
-    color: #fff; }
+    color: #fff;
+    font-size: 3rem;
+    padding-right: 1rem; }
+  .footer__link:hover {
+    color: #999; }
 
 .header {
   height: 95vh;
