adds stock images for testimonials

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
   align-content: center; }
   .heading-primary--main {
     text-transform: uppercase;
-    font-size: 8rem;
+    font-size: 6rem;
     font-weight: 700;
     letter-spacing: 1rem;
     display: flex;
@@ -63,7 +63,7 @@ body {
       animation: moveInRight 1.5s ease-in;
       margin-left: .5rem; }
   .heading-primary--sub {
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 400;
     font-family: "Parisienne", serif;
     letter-spacing: .2rem;
@@ -292,7 +292,8 @@ body {
 .review__photo {
   width: 7rem;
   height: 7rem;
-  margin-right: 2rem; }
+  margin-right: 2rem;
+  border-radius: 50%; }
 
 .review__user {
   display: grid;
