fixes sticky nav bar bug

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -50,21 +50,24 @@
 
       }
     }
-
-    &__sticky-nav {
-      display: grid;
-      justify-content: center;
-      padding: .5rem;
-      margin-top: 0;
-      top: 0;
-      z-index: 100;
-      position: fixed;
-      width: 100%;
-      background-color: $color-white;
-      visibility: hidden;
-    }
 }
 
-.fixed-header {
+.show-header,
+.hide-header {
+  display: grid;
+  justify-content: center;
+  padding: .5rem;
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  background-color: $color-white;
+}
+
+.show-header {
   visibility: visible;
+}
+
+.hide-header {
+  visibility: hidden;
 }
